--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
   <body>
     <h1>Juego POO</h1>
     <div id="puntos">Puntos: 0</div>
-    <div id="game-container"></div>
+    <div id="game-container">
+      <img src="img/cueva.webp" class="fondo">
+    </div>
     <script type="module" src="main.js"></script>
   </body>
 </html>
