--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
   </head>
   <body>
     <h1>Juego POO</h1>
-    <div id="puntos">Puntos: 0</div>
+    <div id="puntuaciones">
+      <div id="puntos">Puntos jugador I: 0</div>
+      <div id="puntos1">Puntos jugador II: 0</div>
+    </div>
     <div id="game-container">
       <img src="img/cueva.webp" class="fondo">
     </div>
