--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>Juego POO</h1>
+    <h1>Minotauro VS Centaura</h1>
     <div id="puntuaciones">
-      <div id="puntos">Puntos jugador I: 0</div>
-      <div id="puntos1">Puntos jugador II: 0</div>
+      <div class="puntuacion" id="puntos">Puntos jugador I: 0</div>
+      <div class="puntuacion" id="puntos1">Puntos jugador II: 0</div>
     </div>
     <div id="game-container">
       <img src="img/cueva.webp" class="fondo">
